--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "compilerOptions": {
         "module": "es6",
-        "target": "es6",
+        "target": "es5",
         "noImplicitAny": false,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": false,
         "declaration": false,
+        "noEmitHelpers": true,
+        "noImplicitUseStrict": true,
         "lib": [
             "es2016"
         ]
