--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,6 +4,7 @@
         "target": "es5",
         "noImplicitAny": false,
         "removeComments": true,
+        "noEmitHelpers": true,
         "preserveConstEnums": true,
         "sourceMap": false,
         "declaration": false,
