--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,17 @@
 {
     "name": "nativescript-intl",
-    "version": "0.0.11",
+    "version": "3.0.0",
     "description": "Provides API for using Native date, time and number formatting with an API similar to Intl.js",
     "nativescript": {
         "platforms": {
-            "android": "2.3.0",
-            "ios": "2.3.0"
+            "android": "3.0.0",
+            "ios": "3.0.0"
         }
     },
     "keywords": [
         "NativeScript", "localization", "globalization", "formatting", "currency", "nativescript-angular"
     ],
-    "author": "Nedyalko Nikolov <nedyalko.nikolov@telerik.com>"
+    "author": {
+        "name":" NativeScript Team"
+    }
 }
