--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
+        "target": "es2017",
+        "module": "es2015",
+        "moduleResolution": "node",
         "noImplicitAny": false,
         "removeComments": true,
         "noEmitHelpers": true,
@@ -9,10 +10,10 @@
         "sourceMap": false,
         "declaration": false,
         "lib": [
-            "es2016"
+            "es2017"
         ]
     },
-    "filesGlob": [
+    "include": [
         "./**/*.ts",
         "./**/*.d.ts",
         "!./node_modules/**/*.ts"
